fix: Fix modal center alignment

--- a/client/Modals/VideoModal/VideoModal.module.css
+++ b/client/Modals/VideoModal/VideoModal.module.css
@@ -1,4 +1,12 @@
 .container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  min-height: calc(100% - var(--space-2xl) * 2);
+
+  margin: var(--space-2xl) 0;
+
   font-size: 0;
 }
 
